<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:divider="@drawable/layout_vertical_divider"
              android:orientation="vertical"
              android:showDividers="middle"
              tools:context=".ui.personalcenter.personalmessage.ChoosePictureFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/set_photo_portrait"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin_normal"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="@dimen/vertical_margin_normal">
        <!--保证Dialog足够宽-->
        <Space
            android:layout_width="500dp"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/select_from_gallery"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:drawablePadding="28dp"
            android:drawableTop="@drawable/select_pic_gallery"
            android:gravity="center_horizontal"
            android:text="@string/gallery"/>

        <TextView
            android:id="@+id/select_take_photo"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:drawablePadding="28dp"
            android:drawableTop="@drawable/select_pic_take_photo"
            android:gravity="center_horizontal"
            android:text="@string/take_photo"/>
    </FrameLayout>

    <TextView
        android:id="@+id/dismiss"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/cancel"/>
</LinearLayout>
