<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/phone_number_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/wallet_all" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_text_il"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/loginText">
            <!--主动设置 textCursorDrawable 和 backgroundTint属性，因为
            在三星J5上在DialogFragment中该属性不是colorAccent
            -->
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="17sp"
                app:backgroundTint="@color/edittext_tint_color" />

        </android.support.design.widget.TextInputLayout>

        <com.homepaas.sls.ui.widget.ColdDownButton
            android:id="@+id/send_auth_code"
            android:layout_width="@dimen/auth_code_button_width"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/auth_code_background"
            android:gravity="center"
            android:text="@string/button_send_auth_code"
            android:textColor="@color/auth_code_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/auth_code_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number_lin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/wallet_all" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/loginText">

            <EditText
                android:id="@+id/auth_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_auth_code"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="17sp"
                app:backgroundTint="@color/edittext_tint_color" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/prompt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auth_code_lin"
        android:layout_centerHorizontal="true"
        android:text="@string/prompt_register" />

    <Button
        android:id="@+id/quick_sign_in_button"
        style="@style/CommonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prompt_register"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/action_sign_in" />

    <TextView
        android:id="@+id/prompt_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/prompt_hint"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>