<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout android:elevation="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.homepaas.sls.ui.widget.CenterTitleToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="新用户注册"/>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/loginText">


            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="17sp"
                app:backgroundTint="@color/edittext_tint_color"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/loginText">

            <com.homepaas.sls.ui.widget.PasswordText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="17sp"
                app:backgroundTint="@color/edittext_tint_color"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/loginText">

                <EditText
                    android:id="@+id/auth_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_auth_code"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="17sp"
                    app:backgroundTint="@color/edittext_tint_color"/>

            </android.support.design.widget.TextInputLayout>

            <com.homepaas.sls.ui.widget.ColdDownButton
                android:id="@+id/send_auth_code"
                android:layout_width="@dimen/auth_code_button_width"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/auth_code_background"
                android:gravity="center"
                android:text="@string/button_send_auth_code"
                android:textColor="@color/auth_code_color"
                android:textSize="14sp"/>
        </LinearLayout>

        <!--邀请码-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/loginText">


            <EditText
                android:id="@+id/recommend_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recommend_code"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="17sp"
                app:backgroundTint="@color/edittext_tint_color"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/protocol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_prompt"
            android:textColor="@color/loginText"/>


        <Button
            android:id="@+id/account_register_button"
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:text="@string/action_register"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
    </LinearLayout>
</LinearLayout>
