<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/white"
             android:clickable="true"
             tools:context=".ui.login.ResetPasswordStepOneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/loginText">

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phone"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="17sp"
                app:backgroundTint="@color/edittext_tint_color"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/loginText">

                <EditText
                    android:id="@+id/auth_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_auth_code"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="17sp"
                    app:backgroundTint="@color/edittext_tint_color"/>

            </android.support.design.widget.TextInputLayout>

            <com.homepaas.sls.ui.widget.ColdDownButton
                android:id="@+id/send_auth_code"
                android:layout_width="@dimen/auth_code_button_width"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/auth_code_background"
                android:gravity="center"
                android:text="@string/button_send_auth_code"
                android:textColor="@color/auth_code_color"
                android:textSize="14sp"/>
        </LinearLayout>

        <Button
            android:enabled="false"
            android:id="@+id/confirm_button"
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/action_confirm"/>


    </LinearLayout>
</FrameLayout>

